--- a/cap.css
+++ b/cap.css
@@ -56,7 +56,7 @@ form {
     padding: 30px;
 }
 
-label {
+label, #errMsg {
     font-size: 35px;
     font-weight: bold;
     color: steelblue;
@@ -85,6 +85,10 @@ form button {
 form a {
     color: black;
     text-decoration: none;
+}
+
+.hidden {
+    display: none;
 }
 
 .weather-results {
